2008-11-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvbchecks.py:
	Set transmission-mode to AUTO if reserved is sent on the bus.

2008-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb-probe-channels.glade:
	* flumotion/component/dvb/dvbchecks.py:
	* flumotion/component/dvb/wizard_gtk.py:
	Peer work with Xavier Queralt.

	Make wizard work with DVB-S as well as DVB-T.
	Fix a couple of bugs stopping scanning.

2008-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix due to changes in gst-python/gstreamer.
	* flumotion/component/dvb/dvbchecks.py:
	General cleanup ( + extra debug )

2008-10-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	Create the widget before base class's render is called.

2008-10-08  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	Chaneg glade_file to gladeFile.

2008-10-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	Fix UI page showing Channel Information.

2008-10-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix up audio only streams by adding a queue after the tee.

2008-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/Makefile.am:
	  Set TRIAL_ENV.
	* Makefile.am:
	* env (deleted):
	* env.in: (added)
	  Generate env.
	* configure.ac:
	  bump to 0.5

2008-10-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Add missing properties: has-video, video-decoder and audio-decoder.

2008-08-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/dvb/dvbchecks.py:
	Remove - and _ from city names. Remove trailing whitespace
	and make comform to pep8.py

2008-08-19  Johan Dahlin  <johan@gnome.org>
